Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21282

Assertion 'mariadb_table' failed in gcol.innodb_virtual_debug_purge

    XMLWordPrintable

Details

    Description

      We got one-time occurrence of this failure on 10.5, right after MDEV-16678 was pushed.

      10.5 adb117cf6901a0e0da7577267be1209359892207

      CURRENT_TEST: gcol.innodb_virtual_debug_purge
      Warning: /mnt/buildbot/build/mariadb-10.5.1/libmysqld/examples/mysqltest_embedded: unknown variable 'loose-ssl-ca=/mnt/buildbot/build/mariadb-10.5.1/mysql-test/std_data/cacert.pem'
      Warning: /mnt/buildbot/build/mariadb-10.5.1/libmysqld/examples/mysqltest_embedded: unknown variable 'loose-ssl-cert=/mnt/buildbot/build/mariadb-10.5.1/mysql-test/std_data/client-cert.pem'
      Warning: /mnt/buildbot/build/mariadb-10.5.1/libmysqld/examples/mysqltest_embedded: unknown variable 'loose-ssl-key=/mnt/buildbot/build/mariadb-10.5.1/mysql-test/std_data/client-key.pem'
      Warning: /mnt/buildbot/build/mariadb-10.5.1/libmysqld/examples/mysqltest_embedded: unknown option '--loose-skip-ssl'
      Got ERROR: "InnoDB: Operating system error number 2 in a file operation." errno: 2000
      Got ERROR: "InnoDB: The error means the system cannot find the path specified." errno: 2000
      Got ERROR: "InnoDB: If you are installing InnoDB, remember that you must create directories yourself, InnoDB does not create them." errno: 2000
      Got ERROR: "InnoDB: Cannot open datafile for read-only: './mysql/innodb_index_stats.ibd' OS error: 71" errno: 2000
      Got ERROR: "InnoDB: Operating system error number 2 in a file operation." errno: 2000
      Got ERROR: "InnoDB: The error means the system cannot find the path specified." errno: 2000
      Got ERROR: "InnoDB: If you are installing InnoDB, remember that you must create directories yourself, InnoDB does not create them." errno: 2000
      Got ERROR: "InnoDB: Cannot open datafile for read-only: './mysql/innodb_table_stats.ibd' OS error: 71" errno: 2000
      Got ERROR: "InnoDB: Operating system error number 2 in a file operation." errno: 2000
      Got ERROR: "InnoDB: The error means the system cannot find the path specified." errno: 2000
      Got ERROR: "InnoDB: If you are installing InnoDB, remember that you must create directories yourself, InnoDB does not create them." errno: 2000
      Got ERROR: "InnoDB: Cannot open datafile for read-only: './mysql/transaction_registry.ibd' OS error: 71" errno: 2000
      mysqltest_embedded: /home/buildbot/buildbot/build/mariadb-10.5.1/storage/innobase/row/row0vers.cc:469: void row_vers_build_clust_v_col(dtuple_t*, dict_index_t*, dict_index_t*, mem_heap_t*): Assertion `maria_table' failed.
      

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/20497/steps/mtr_ps_emb/logs/stdio

      My attempts to repeat the failure failed. I tried the debug and debug+ASAN build of the embedded server. The ASAN build completed successfully the following:

      ASAN_OPTIONS=abort_on_error=1 ./mtr --embedded --repeat=10 --parallel=auto gcol.innodb_virtual_debug_purge{,,,,,,,,,,,,,}
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5.25h
                  5.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.