MDEV-21282 Assertion 'mariadb_table' failed in gcol.innodb_virtual_debug_purge

- commit ea37b144094a0c2ebfc6774047fd473c1b2a8658 (MDEV-16678) caused
a regression. when purge thread tries to open the table for virtual
column computation, there is no need to acquire MDL for the table.
Because purge thread already hold MDL for the table